# amtrak_performance

./: README.md  requirements.txt
src/: augment.py  clean.py  combine.py  explore_mi_service.py  explore_network.py  explore_service.py  explore_station.py  explore_train.py  notebook.toml  pyproject.toml
src/data/processed/: amtk_stations.csv  amtk_sub_services.json  regions_divisions-orig.json  regions_divisions.json  state_support_qtr_stats.json  states_provinces.json
src/data/raw/: FY21%20Q4%20Station%20Performance%20Metrics.xlsx  FY22%20Q1%20Station%20Performance%20Metric.xlsx  FY22%20Q2%20Station%20Performance%20Metric.xlsx  FY22%20Q3%20Station%20Performance%20Metric.xlsx  FY22%20Q4%20Station%20Performance%20Metric.xlsx  FY23%20Q1%20Station%20Performance%20Metric.xlsx  FY23%20Q2%20Station%20Performance%20Metrics.xlsx  FY23%20Q3%20Station%20Performance%20Metric.xlsx  FY23%20Q4%20Station%20Performance%20Metric.xlsx  FY24%20Q1%20Station%20Performance%20Metric.xlsx  FY24%20Q2%20Station%20Performance%20Metric.xlsx  FY24%20Q3%20Station%20Performance%20Metric.xlsx  NTAD_Amtrak_Stations_-3056704789218436106.csv
src/data/student/: fxt-amtk-avg_min_late_predict.csv  fxt-amtk-lax_qtr_stats.csv  fxt-amtk-long_dist_qtr_stats.csv  fxt-amtk-nec_qtr_stats.csv  fxt-amtk-network_qtr_stats.csv  fxt-amtk-state_qtr_stats.csv  fxt-amtk_2154_rte_stats.csv  fxt-amtk_2155_rte_stats.csv  fxt-amtk_350_rte_stats.csv  fxt-amtk_351_rte_stats.csv  fxt-amtk_353_rte_stats.csv  fxt-amtk_354_rte_stats.csv  fxt-amtk_364_rte_stats.csv  fxt-amtk_365_rte_stats.csv  fxt-amtk_370_rte_stats.csv  (+11 more)
(+15 files in other folders)
