[project]
name = "fra-amtrak"
version = "0.1.0"
description = "Amtrak station performance analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "ipykernel>=6.29.5",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "watermark>=2.5.0",
]

[tool.ruff]
line-length = 100
preview = true
